# nts

./: .env  Cargo.toml  LICENSE  README.md  configuration.yaml
configuration/: base.yaml
migrations/: 04_create_subscription_tokens_table.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscription.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
